@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-26T16:22:39Z",
+  "timestamp" : "2023-10-27T01:15:11Z",
   "count_outdated" : 565,
   "uniques_outdated" : 268,
-  "count" : 599,
+  "count" : 600,
   "uniques" : 283,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
